tests/snapshots/run_wpt_conformance__trtx_averagePool2d_float32_4D_tensor_options_outputSizes_ignores_options_outputShapeRounding_floor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "averagePool2d.https.any.js",
    "averagePool2d float32 4D tensor options.outputSizes ignores options.outputShapeRounding=floor",
    "trtx",
    "PASS",
)
